added doa connection and more code in the CLI app

--- a/webpage-mockup/results.html
+++ b/webpage-mockup/results.html
@@ -6,8 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Past Inspections</title>
 	    <link rel="stylesheet" type="text/css" href="https://ryanmontville.com/style.css" />
-    	<link rel="stylesheet" type="text/css" href="https://ryanmontville.com/inspection-style.css" />
+    	<link rel="stylesheet" type="text/css" href="inspection-style.css" />
         <script src="https://kit.fontawesome.com/52202eaccb.js" crossorigin="anonymous"></script>
+        <style>main {overflow: hidden;}</style>
     </head>
     <main>
     <div id="button-group">
@@ -19,7 +20,7 @@
         <br>
         <ul class="inspection-info">
             <li>10/23/22 12:55pm</li>
-            <li>85F Sunny</li>
+            <li><i class="fa fa-sun"></i> 85F Sunny</li>
             <li>Bee Temperment: Calm</li>
             <li>Bee Population: Normal</li>
         </ul><ul class="inspection-info">
@@ -28,6 +29,8 @@
             <li>Hive Beetles: Few</li>
             <li>Other Pests: none</li>
         </ul>
+        <p>Other weather icons: <i class="fa fa-cloud"></i> <i class="fa fa-wind"></i> <i class="fa fa-sun-cloud"></i> 
+            <i class="fa fa-cloud-bolt"></i> <i class="fa fa-snowflake"></i> <i class="fa fa-cloud-rain"></i></p>
         <p id="rotate-phone-message"><i class="fa  fa-circle-exclamation"></i> Note: this page is viewed best in landscape or on a desktop.</p>
         <table id="inspection-table">
             <thead>
