--- a/webpage-mockup/index.html
+++ b/webpage-mockup/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Bee Inspection</title>
-	    <link rel="stylesheet" type="text/css" href="https://ryanmontville.com/style.css" />
-    	<link rel="stylesheet" type="text/css" href="https://ryanmontville.com/inspection-style.css" />
+	    <link rel="stylesheet" type="text/css" href="style.css" />
+    	<link rel="stylesheet" type="text/css" href="inspection-style.css" />
     </head>
     <main>
         <div id="button-group" class="bee-home">
