--- a/webpage-mockup/box-inspection.html
+++ b/webpage-mockup/box-inspection.html
@@ -5,7 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>BOX 1</title>
-        <link rel="stylesheet" type="text/css" href="https://ryanmontville.com/style.css" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
+    	<link rel="stylesheet" type="text/css" href="inspection-style.css" />
         <style>
             body {
                 background-color: black;
