updating name to BuzzNote

--- a/React/public/index.html
+++ b/React/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Bee inspection tracker app"
+      content="Bee hive health tracker app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -15,7 +15,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab" />
-    <title>Bees</title>
+    <base href="/buzz-note-v1/" />
+    <title>BuzzNote</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
